# BinProto

./: Cargo.toml  README.md
benches/: encoding_benchmark.rs
derive/: Cargo.toml
derive/src/: lib.rs
derive/tests/: derive_test.rs
src/: client.rs  codegen.rs  debugger.rs  generator.rs  lib.rs  schema.rs  server.rs
src/multilang/: examples.rs  mod.rs  python_gen.rs  typescript_gen.rs
